# hyperion

./: CMakeLists.txt  README.md
adt/: linear_list.hpp  linked_list.hpp
math/: carmack_magic.hpp
test/: CMakeLists.txt  test_cxxstd_this_thread.cc  test_cxxstd_thread.cpp
test/adt/: CMakeLists.txt  test_linear_list.cc
test/cxxstd_concurrency/: CMakeLists.txt  test_cxxstd_mutex.cc  test_cxxstd_this_thread.cc  test_cxxstd_thread.cc
